
   * ``KnitVersionedFile.add*`` will no longer cache added records even when
     enable_cache() has been called - the caching feature is now exclusively for
     reading existing data. (Robert Collins)

   * Removed previously deprecated varargs interface to ``TestCase.run_bzr`` and
     deprecated methods ``TestCase.capture`` and ``TestCase.run_bzr_captured``.
     (Martin Pool)

   * Special purpose method ``TestCase.run_bzr_decode`` is moved to the test_non_ascii 
     class that needs it.
     (Martin Pool)

   * The ``VersionedFile`` interface now allows content checks to be bypassed
     by supplying check_content=False.  This saves nearly 30% of the minimum
     cost to store a version of a file. (Robert Collins)

   * Tree's with bad state such as files with no length or sha will no longer
     be silently accepted by the repository XML serialiser. To serialise
     inventories without such data, pass working=True to write_inventory.
     (Robert Collins)

   * ``VersionedFile.fix_parents`` has been removed as a harmful API.
     ``VersionedFile.join`` will no longer accept different parents on either
     side of a join - it will either ignore them, or error, depending on the
     implementation. See notes when upgrading for more information.
     (Robert Collins)

  INTERNALS:

    * ``bzrlib.transport.Transport.put_file`` now returns the number of bytes
      put by the method call, to allow avoiding stat-after-write or
      housekeeping in callers. (Robert Collins)

   * New class ``bzrlib.errors.InternalBzrError`` which is just a convenient
     shorthand for deriving from BzrError and setting internal_error = True.
     (Robert Collins)

   * New method ``bzrlib.mutabletree.update_to_one_parent_via_delta`` for
     moving the state of a parent tree to a new version via a delta rather than
     a complete replacement tree. (Robert Collins)

   * New method ``bzrlib.osutils.minimum_path_selection`` useful for removing